--- a/MovieReview_NLP.ipynb
+++ b/MovieReview_NLP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MovieReview_NLP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzRt3ZUyfZRv/Z1mqbTYJM"
+      "authorship_tag": "ABX9TyOy9LP3ZLwQZ+7b11APzwgU"
     },
     "kernelspec": {
       "name": "python3",
@@ -58,7 +58,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, confusion_matrix, roc_auc_score, roc_curve"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "from sklearn import model_selection, naive_bayes, svm\n",
         "from sklearn.preprocessing import LabelEncoder"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,16 +89,16 @@
         "id": "GN_rrfMsgQIK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 359
         },
-        "outputId": "28dea1fa-9d51-444c-f3f7-94b27baacbec"
+        "outputId": "9921fa94-46cd-47d8-faf9-a55cb557e1e0"
       },
       "source": [
         "data = pd.read_csv(\"https://bd.darrenmcewan.com/ratings.tsv\", sep='\\t')\n",
         "data.review=data.review.astype(str)\n",
-        "data.head()"
+        "data.head(10)"
       ],
-      "execution_count": 170,
+      "execution_count": 256,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,6 +152,31 @@
               "      <td>neg</td>\n",
               "      <td>my first press screening of 1998 and already i...</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>neg</td>\n",
+              "      <td>to put it bluntly , ed wood would have been pr...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>neg</td>\n",
+              "      <td>synopsis : melissa , a mentally-disturbed woma...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>neg</td>\n",
+              "      <td>tim robbins and martin lawernce team up in thi...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>neg</td>\n",
+              "      <td>in \" gia \" , angelina jolie plays the titular ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>neg</td>\n",
+              "      <td>in 1990 , the surprise success an unheralded l...</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -162,13 +187,18 @@
               "1   neg  some talented actresses are blessed with a dem...\n",
               "2   pos  this has been an extraordinary year for austra...\n",
               "3   pos  according to hollywood movies made in last few...\n",
-              "4   neg  my first press screening of 1998 and already i..."
+              "4   neg  my first press screening of 1998 and already i...\n",
+              "5   neg  to put it bluntly , ed wood would have been pr...\n",
+              "6   neg  synopsis : melissa , a mentally-disturbed woma...\n",
+              "7   neg  tim robbins and martin lawernce team up in thi...\n",
+              "8   neg  in \" gia \" , angelina jolie plays the titular ...\n",
+              "9   neg  in 1990 , the surprise success an unheralded l..."
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 170
+          "execution_count": 256
         }
       ]
     },
@@ -207,7 +237,7 @@
         "#tokenization\n",
         "data['review']= [word_tokenize(entry) for entry in data['review']]"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +265,7 @@
         "    # The final processed set of words for each iteration will be stored in 'text_final'\n",
         "    data.loc[index,'review_final'] = str(Final_words)"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +287,7 @@
         "#y_train.dropna(inplace=True)\n",
         "#y_test.dropna(inplace=True)\n"
       ],
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +300,7 @@
         "y_train = Encoder.fit_transform(y_train)\n",
         "y_test = Encoder.fit_transform(y_test)"
       ],
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +382,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -371,7 +401,7 @@
         "print(trainWeightFrame)\n",
         "print(\"\\n\",testWeightFrame)"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +488,7 @@
         "    plt.show()\n",
         "    "
       ],
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +505,7 @@
         "X_train = tfidf.transform(train['review'])\n",
         "X_test = tfidf.transform(test['review'])"
       ],
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +526,7 @@
         "print(precision_score(y_test, yhat))\n",
         "print(recall_score(y_test, yhat))"
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +556,7 @@
         "plot_roc_curve(fpr, tpr)\n",
         "print(roc_auc_score(y_test, y_prob))"
       ],
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -563,7 +593,7 @@
         "feats['neg'] = np.e**(nb.feature_log_prob_[1, :])\n",
         "feats.set_index('words', inplace=True)"
       ],
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +609,7 @@
       "source": [
         "feats.sort_values(by='pos',ascending=False).head(15)"
       ],
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +762,7 @@
       "source": [
         "feats.sort_values(by='neg',ascending=False).head(15)"
       ],
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -939,7 +969,7 @@
         "# Use accuracy_score function to get the accuracy\n",
         "print(\"Naive Bayes Accuracy Score -> \",accuracy_score(predictions_NB, y_test)*100)"
       ],
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +1010,7 @@
         "# Use accuracy_score function to get the accuracy\n",
         "print(\"SVM Accuracy Score -> \",accuracy_score(predictions_SVM, y_test)*100)"
       ],
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1048,7 @@
         "predictions_MLP = MLP.predict(Test_X_Tfidf)\n",
         "print(\"MLP Accuracy Score -> \",accuracy_score(predictions_MLP, y_test)*100)"
       ],
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1076,7 @@
       "source": [
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer "
       ],
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1070,7 +1100,7 @@
         "        print(\"Neutral\") \n",
         "  #print(\"{:-<40} {}\".format(sentence, str(sentiment_dict)))"
       ],
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1080,28 +1110,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O-d7lG-oGoPn",
-        "outputId": "55e3ddf1-d65b-48ee-b9f3-78c144dc366a"
+        "outputId": "2c8a18ba-2f43-4a13-fd19-2ba0a17769d3"
       },
       "source": [
         "for i in range(10):\n",
-        "  sentiment_scores(data['review'][i])\n",
+        "  sentiment_scores(data['review_final'][1])\n",
         "\n"
       ],
-      "execution_count": 229,
+      "execution_count": 254,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n"
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n",
+            "Negative\n"
           ],
           "name": "stdout"
         }
@@ -1132,7 +1162,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nZNHzejWI2-f",
-        "outputId": "2f7188e0-8f05-4e20-deea-765969282bfc"
+        "outputId": "edc81c97-a0d7-45d8-fd22-a129b84bf36f"
       },
       "source": [
         "from textblob import TextBlob\n",
@@ -1143,23 +1173,23 @@
         "    print(sentence.sentiment.polarity)\n",
         "\n",
         "for i in range(10):\n",
-        "  sentiment_scores(data['review'][i])"
+        "  sentiment_scores(data['review_final'][i])"
       ],
-      "execution_count": 232,
+      "execution_count": 255,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n",
-            "Neutral\n"
+            "Negative\n",
+            "Negative\n",
+            "Positive\n",
+            "Positive\n",
+            "Negative\n",
+            "Negative\n",
+            "Positive\n",
+            "Positive\n",
+            "Positive\n",
+            "Negative\n"
           ],
           "name": "stdout"
         }
@@ -1197,7 +1227,7 @@
         "from gensim.models import CoherenceModel\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1229,7 +1259,7 @@
         "                                           per_word_topics=True)\n",
         "\n",
         "ldatopics = lda_model.show_topics(formatted=False)\n",
-        "pprint(lda_model.print_topics())"
+        "print(lew(lda_model.print_topics()))"
       ],
       "execution_count": null,
       "outputs": []
